--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
 
     <!-- footer section -->
      <footer>
-
-     </footer>
+        <nav class="navbar fixed-bottom bg-body-tertiary bg-body-tertiary bg-dark" data-bs-theme="dark">
+            <div class="container">
+              <p class="navbar-brand mx-auto fs-6">@ 2024 - Tutti i diritti riservati</p>
+            </div>
+        </nav>     
+    </footer>
     <!-- /footer section -->
 
     
