--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- main section -->
      <main>
-        <div class="container mt-2 mb-1">
+        <div class="container mt-2 mb-5">
             <div class="row">
                 
                 <div class="col-12">
@@ -150,7 +150,7 @@
 
     <!-- footer section -->
      <footer>
-        <nav class="navbar fixed-bottom bg-body-tertiary bg-body-tertiary bg-dark" data-bs-theme="dark">
+        <nav class="navbar sticky-bottom bg-body-tertiary bg-body-tertiary bg-dark" data-bs-theme="dark">
             <div class="container">
               <p class="navbar-brand mx-auto fs-6">@ 2024 - Tutti i diritti riservati</p>
             </div>
