--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <!-- main section -->
      <main>
         <div class="container mt-2 mb-5">
-            <div class="row">
+            <div class="row justify-content-center">
                 
-                <div class="col-12">
+                <div class="col-12 col-xl-9 mb-5">
 
                     <h1>Richiesta Preventivo</h1>
                     <p>Compila il form per richedere un preventivo per i nostri servizi di sviluppo</p>
@@ -117,6 +117,27 @@
                       </form>
                     <!-- /form -->
 
+                </div>
+
+                <div class="col col-xl-3">
+                    <div class="card">
+                        <svg class="bd-placeholder-img card-img-top fw-bold fs-1" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#868e96"></rect>
+                            <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" fill="#dee2e6">300 x 200</text>
+                        </svg>
+                        <div class="card-body">
+                          <h5 class="card-title">I nostri contatti</h5>
+                          <p class="card-text">Se hai bisogno di aiuto per contattarci:</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">help@boolfactory.test</li>
+                          <li class="list-group-item">+11222334456</li>
+                        </ul>
+                        <div class="card-body">
+                          <a href="#" class="card-link">Help desck</a>
+                        </div>
+                      </div>
                 </div>
 
             </div>
