--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
                 </div>
 
-                <div class="col col-xl-3"> <!-- caontacts card -->
-                    <div class="card">
+                <div class="col col-xl-3 d-flex justify-content-end"> <!-- caontacts card -->
+                    <div class="card" style="width: 18rem;">
                         <svg class="bd-placeholder-img card-img-top fw-bold fs-1" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#868e96"></rect>
